--- a/index.html
+++ b/index.html
@@ -205,7 +205,10 @@
   <!-- Footer -->
 
   <footer id="footer">
-
+    <i class="fab fa-twitter"></i>
+    <i class="fab fa-facebook-f"></i>
+    <i class="fab fa-instagram"></i>
+    <i class="fas fa-envelope"></i>
     <p>© Copyright 2018 TinDog</p>
 
   </footer>
