--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -145,52 +145,52 @@
     <p>Simple and affordable price plans for your and your dog.</p>
 
 
-  <div class="row">
-    <div class="pricing-column col-lg-4 col-md-6">
-      <div class="card">
-        <div class="card-header">
-          <h3>Chihuahua</h3>
+    <div class="row">
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3>Chihuahua</h3>
+          </div>
+          <div class="card-body">
+            <h2>Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messags Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg w-100 btn-outline-dark" type="button">Sign Up</button>
+          </div>
         </div>
-        <div class="card-body">
-          <h2>Free</h2>
-          <p>5 Matches Per Day</p>
-          <p>10 Messags Per Day</p>
-          <p>Unlimited App Usage</p>
-          <button class="btn btn-lg w-100 btn-outline-dark" type="button">Sign Up</button>
+      </div>
+      <div class="pricing-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3>Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2>$49/Mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg w-100 btn-dark" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+      <div class="pricing-column col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2>$99/Mo</h2>
+            <p>Priority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg w-100 btn-dark" type="button">Sign Up</button>
+          </div>
         </div>
       </div>
     </div>
-    <div class="pricing-column col-lg-4 col-md-6">
-      <div class="card">
-        <div class="card-header">
-          <h3>Labrador</h3>
-        </div>
-        <div class="card-body">
-          <h2>$49/Mo</h2>
-          <p>Unlimited Matches</p>
-          <p>Unlimited Messages</p>
-          <p>Unlimited App Usage</p>
-          <button class="btn btn-lg w-100 btn-dark" type="button">Sign Up</button>
-        </div>
-      </div>
-    </div>
-    <div class="pricing-column col-lg-4">
-      <div class="card">
-        <div class="card-header">
-          <h3>Mastiff</h3>
-        </div>
-        <div class="card-body">
-          <h2>$99/Mo</h2>
-          <p>Priority Listing</p>
-          <p>Unlimited Matches</p>
-          <p>Unlimited Messages</p>
-          <p>Unlimited App Usage</p>
-          <button class="btn btn-lg w-100 btn-dark" type="button">Sign Up</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
+  </section>
   <!-- Call to Action -->
 
   <section id="cta">
