--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <!-- Title -->
       <div class="row">
         <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
@@ -76,19 +76,19 @@
 
       <div class="col-lg-4">
         <i class="fas fa-check-circle fa-4x"></i>
-        <h3>Easy to use.</h3>
+        <h3 class="feature-title">Easy to use.</h3>
         <p>So easy to use, even your dog could do it.</p>
       </div>
 
       <div class="col-lg-4">
         <i class="fas fa-bullseye fa-4x"></i>
-        <h3>Elite Clientele</h3>
+        <h3 class="feature-title">Elite Clientele</h3>
         <p>We have all the dogs, the greatest dogs.</p>
       </div>
 
       <div class="col-lg-4">
         <i class="fas fa-heart fa-4x"></i>
-        <h3>Guaranteed to work.</h3>
+        <h3 class="feature-title">Guaranteed to work.</h3>
         <p>Find the love of your dog's life or your money back.</p>
       </div>
 
@@ -104,7 +104,7 @@
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
@@ -141,7 +141,7 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
 
@@ -152,7 +152,7 @@
             <h3>Chihuahua</h3>
           </div>
           <div class="card-body">
-            <h2>Free</h2>
+            <h2 class="price-text">Free</h2>
             <p>5 Matches Per Day</p>
             <p>10 Messags Per Day</p>
             <p>Unlimited App Usage</p>
@@ -166,7 +166,7 @@
             <h3>Labrador</h3>
           </div>
           <div class="card-body">
-            <h2>$49/Mo</h2>
+            <h2 class="price-text">$49/Mo</h2>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
@@ -180,7 +180,7 @@
             <h3>Mastiff</h3>
           </div>
           <div class="card-body">
-            <h2>$99/Mo</h2>
+            <h2 class="price-text">$99/Mo</h2>
             <p>Priority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
@@ -195,7 +195,7 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
     <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
 
