--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
   <title>TinDog</title>
 
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/png" href="images/iphone6.png"/>
+
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
